# setgitconfig-rs

./: Cargo.toml  README.md  release.sh  rustfmt.toml
.github/workflows/: linux.yml
config/: config.toml
src/: config.rs  errors.rs  main.rs
