[package]
name = "setgitconfig-rs"
version = "0.1.2"
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
description = "Set proper git username and email based on the current repository you are in."
homepage = "https://github.com/ansrivas/setgitconfig-rs"
documentation = "https://docs.rs/setgitconfig_rs"
repository = "https://github.com/ansrivas/setgitconfig-rs"
readme = "README.md"
keywords = [
    "gitconfig",
    "command-line",
    "tool",
]
license = "MIT"
categories = ["command-line-utilities"]
edition="2018"


[[bin]]
name = "setgitconfig"
path = "src/main.rs"

[dependencies]
git2 = "0.13.6"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0"
custom_error = "1.7.1"
toml = "0.5.6"
log = "0.4.0"
env_logger = "0.7.1"
