[package]
name = "setgitconfig-rs"
version = "0.5.0"
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
description = "Set proper git username and email based on the current repository you are in."
homepage = "https://github.com/ansrivas/setgitconfig-rs"
documentation = "https://docs.rs/setgitconfig_rs"
repository = "https://github.com/ansrivas/setgitconfig-rs"
readme = "README.md"
keywords = ["gitconfig", "command-line", "tool"]
license = "MIT"
categories = ["command-line-utilities"]
edition = "2021"


[[bin]]
name = "setgitconfig"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
thiserror = "1.0"
toml = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
